# GP-netPlus-ros

./: README.md  requirements.txt
src/gpnetplus/: CMakeLists.txt  package.xml
src/gpnetplus/launch/: tiago_example.launch
src/gpnetplus/msg/: BoundingBox.msg  GPnetPlusGrasp.msg  GraspProposals.msg
src/gpnetplus/scripts/: detection.py  grasp_planning_node.py  model.py  object_detection_model.py  object_detection_node.py  tiago_example.py  transform.py  utils.py
src/gpnetplus/srv/: GPnetPlusGraspPlanner.srv  ObjectDetector.srv
